--- a/craft/templates/_layouts/_layout.html
+++ b/craft/templates/_layouts/_layout.html
@@ -29,12 +29,7 @@
   {% set cart = craft.commerce.cart %}
 
   <!-- Header -->
-  <header id="header">
-
-    {% include 'partials/nav' %}
-    {% include 'partials/banners' %}
-
-  </header>
+  {% include 'partials/header.html' %}
 
   <!-- Inherited Main Content -->
   <main id="content" role="main">
