--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -168,28 +168,27 @@ body {
 /* line 16, sass/shared.sass */
 header {
   border-bottom: 30px solid #B24629;
-  height: 360px;
   display: block;
 }
-/* line 17, sass/shared.sass */
-#home header {
+/* line 19, sass/shared.sass */
+#home header .header-body {
   height: 770px;
 }
-/* line 19, sass/shared.sass */
-#commerce header {
+/* line 21, sass/shared.sass */
+#commerce header .header-body {
   height: 120px;
 }
-/* line 21, sass/shared.sass */
-#commerce header .logo {
-  top: 22px;
-}
-/* line 26, sass/shared.sass */
+/* line 23, sass/shared.sass */
 header .header-container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 30, sass/shared.sass */
+/* line 27, sass/shared.sass */
+header .header-body {
+  height: 360px;
+}
+/* line 29, sass/shared.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 120px;
@@ -197,7 +196,7 @@ header nav {
   z-index: 1;
   position: relative;
 }
-/* line 36, sass/shared.sass */
+/* line 35, sass/shared.sass */
 header .logo {
   width: 225px;
   height: 67px;
@@ -208,17 +207,17 @@ header .logo {
   top: 8px;
   margin-left: -112px;
 }
-/* line 37, sass/shared.sass */
+/* line 36, sass/shared.sass */
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 39, sass/shared.sass */
+/* line 38, sass/shared.sass */
 header .logo a {
   width: 225px;
   height: 67px;
   display: block;
 }
-/* line 51, sass/shared.sass */
+/* line 50, sass/shared.sass */
 header .navigation {
   padding-top: 93px;
   display: block;
@@ -226,36 +225,36 @@ header .navigation {
   margin: 0 auto;
   text-align: justify;
 }
-/* line 57, sass/shared.sass */
+/* line 56, sass/shared.sass */
 header .navigation:after {
   width: 100%;
   display: inline-block;
   content: ".";
   visibility: hidden;
 }
-/* line 62, sass/shared.sass */
+/* line 61, sass/shared.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
-/* line 65, sass/shared.sass */
+/* line 64, sass/shared.sass */
 header .navigation a {
   font-size: 17px;
   color: #fff;
   text-decoration: none;
   padding-bottom: 10px;
 }
-/* line 70, sass/shared.sass */
+/* line 69, sass/shared.sass */
 header .navigation a.active {
   border-bottom: 5px solid #fff;
 }
 
-/* line 73, sass/shared.sass */
+/* line 72, sass/shared.sass */
 .user-menu {
   color: white;
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
 }
-/* line 76, sass/shared.sass */
+/* line 75, sass/shared.sass */
 .user-menu p {
   text-transform: capitalize;
   font-weight: 200;
@@ -266,24 +265,24 @@ header .navigation a.active {
   top: 1px;
   display: inline-block;
 }
-/* line 85, sass/shared.sass */
+/* line 84, sass/shared.sass */
 .user-menu a {
   text-transform: uppercase;
   color: white;
   text-decoration: none;
 }
-/* line 89, sass/shared.sass */
+/* line 88, sass/shared.sass */
 .user-menu a span {
   margin-right: 5px;
 }
 
-/* line 93, sass/shared.sass */
+/* line 92, sass/shared.sass */
 .order-menu a {
   color: white;
   margin-left: 5px;
 }
 
-/* line 97, sass/shared.sass */
+/* line 96, sass/shared.sass */
 .top-menu {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -300,7 +299,7 @@ header .navigation a.active {
   justify-content: space-between;
 }
 
-/* line 110, sass/shared.sass */
+/* line 109, sass/shared.sass */
 .options-menu {
   text-transform: uppercase;
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
@@ -308,12 +307,12 @@ header .navigation a.active {
   line-height: 26px;
   margin-top: 9px;
 }
-/* line 116, sass/shared.sass */
+/* line 115, sass/shared.sass */
 .options-menu .localization {
   display: inline-block;
   vertical-align: top;
 }
-/* line 119, sass/shared.sass */
+/* line 118, sass/shared.sass */
 .options-menu .localization li {
   padding: 0 9px;
   height: 25px;
@@ -322,20 +321,20 @@ header .navigation a.active {
   float: left;
   display: block;
 }
-/* line 126, sass/shared.sass */
+/* line 125, sass/shared.sass */
 .options-menu .localization li.active {
   background: #B24629;
 }
-/* line 128, sass/shared.sass */
+/* line 127, sass/shared.sass */
 .options-menu .localization li.active a {
   color: #fff;
 }
-/* line 130, sass/shared.sass */
+/* line 129, sass/shared.sass */
 .options-menu .localization li a {
   text-decoration: none;
   color: #999999;
 }
-/* line 133, sass/shared.sass */
+/* line 132, sass/shared.sass */
 .options-menu .cart {
   display: inline-block;
   vertical-align: top;
@@ -346,18 +345,18 @@ header .navigation a.active {
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
   text-transform: uppercase;
 }
-/* line 142, sass/shared.sass */
+/* line 141, sass/shared.sass */
 .options-menu .cart .fa {
   padding-right: 4px;
 }
-/* line 144, sass/shared.sass */
+/* line 143, sass/shared.sass */
 .options-menu .cart a {
   color: white;
   text-decoration: none;
   display: block;
   height: 100%;
 }
-/* line 149, sass/shared.sass */
+/* line 148, sass/shared.sass */
 .options-menu .cart a span {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -377,7 +376,7 @@ header .navigation a.active {
   text-align: center;
 }
 
-/* line 165, sass/shared.sass */
+/* line 164, sass/shared.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
@@ -385,34 +384,34 @@ footer {
   margin-bottom: 50px;
   font-size: 14px;
 }
-/* line 166, sass/shared.sass */
+/* line 165, sass/shared.sass */
 #home footer {
   padding-top: 14px;
 }
-/* line 173, sass/shared.sass */
+/* line 172, sass/shared.sass */
 footer a {
   color: #333333;
   text-decoration: none;
 }
-/* line 176, sass/shared.sass */
+/* line 175, sass/shared.sass */
 footer a:hover {
   text-decoration: underline;
 }
-/* line 178, sass/shared.sass */
+/* line 177, sass/shared.sass */
 footer ul {
   margin-bottom: 10px;
 }
-/* line 180, sass/shared.sass */
+/* line 179, sass/shared.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 184, sass/shared.sass */
+/* line 183, sass/shared.sass */
 footer ul li:last-child {
   border-right: none;
 }
-/* line 187, sass/shared.sass */
+/* line 186, sass/shared.sass */
 footer ul li.facebook a {
   text-indent: -10000px;
   background-image: url('/images/site/facebook.png?1478116388');
