--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -14,19 +14,18 @@ body
 // Header and Footer Work
 
 header
-  #home &
-    height: $header-tall
-  #commerce &
-    height: 120px
-    .logo
-      top: 22px
   border-bottom: $header-border solid $copper
-  height: $header-short
   display: block
+  #home & .header-body
+    height: $header-tall
+  #commerce & .header-body
+    height: 120px
   .header-container
     width: $medium-width
     margin: 0 auto
     position: relative
+  .header-body
+    height: $header-short
   nav
     background-color: rgba(0,0,0,0.35)
     height: 120px
