--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -1,18 +1,26 @@
 <form method="POST">
   <input type="hidden" name="action" value="commerce/cart/updateCart">
   <input type="hidden" name="redirect" value="commerce/cart">
-  <input type="hidden" value="{{ product.defaultVariantId }}" name="purchasableId" />
 
   {{ getCsrfInput() }}
-  <span class="price">{{ product.defaultVariant.price|currency(cart.currency) }}</span>
-  {% if product.defaultVariant.stock <= 0 and product.defaultVariant.unlimitedStock == false %}
-    <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
-  {% else %}
-    <div class="input-group">
-      <label for="qty">Qty:</label>
-      <input type="number" name="qty" value="1" min="1" max="10">
-    </div>
-    <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
-  {% endif %}
+
+  {% for variant in product.variants %}
+    {% if regionCode in variant.sku  %}
+        <input type="hidden" value="{{ variant.purchasableId }}" name="purchasableId" />
+        <span class="price">{{ variant.price|commerceCurrency(currencyCode,convert=true,format=true) }}</span>
+      {% if variant.stock <= 0 and variant.unlimitedStock == false%}
+        <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
+      {% else %}
+        <div class="input-group">
+          <label for="qty">Qty:</label>
+          <input type="number" name="qty" value="1" min="0" max="10">
+        </div>
+        <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
+      {% endif %}
+    {% endif %}
+  {% endfor  %}
+
 </form>
+
+
 
