Ensure that button reads ‘Purchase’ and not ‘Buy’

--- a/craft/templates/partials/product_preview.html
+++ b/craft/templates/partials/product_preview.html
@@ -5,7 +5,7 @@
   <a class="learn-more" href="{{item.getUrl()}}">Learn More</a>
   <!--  -->
   <div class="buy-reveal">
-    <a class="faux-buy">{{ "Buy" | t }}</a>
+    <a class="faux-buy">{{ "Purchase" | t }}</a>
     <form method="POST">
       <input type="hidden" name="action" value="commerce/cart/updateCart">
       <input type="hidden" name="redirect" value="commerce/cart">
