Ensure that we dont override normal flash messaging.

--- a/public/css/store.css
+++ b/public/css/store.css
@@ -807,6 +807,12 @@ img.product {
 
 /* line 558, sass/store.sass */
 .flash {
+  color: #ED8F17;
+  margin-bottom: 10px;
+}
+
+/* line 562, sass/store.sass */
+.flash-bar {
   background-color: #ED8F17;
   height: 35px;
   line-height: 37px;
@@ -817,27 +823,27 @@ img.product {
   font-size: 19px;
   text-transform: uppercase;
 }
-/* line 568, sass/store.sass */
-.flash span {
+/* line 572, sass/store.sass */
+.flash-bar span {
   margin-right: 10px;
 }
-/* line 570, sass/store.sass */
-#commerce #content .container .flash {
+/* line 574, sass/store.sass */
+#commerce #content .container .flash-bar {
   position: relative;
   bottom: 30px;
   margin-top: 0;
 }
 
-/* line 576, sass/store.sass */
+/* line 580, sass/store.sass */
 .has-error input {
   border: 1px solid #ED8F17;
 }
-/* line 578, sass/store.sass */
+/* line 582, sass/store.sass */
 .has-error .help-block {
   color: #ED8F17;
 }
 
-/* line 581, sass/store.sass */
+/* line 585, sass/store.sass */
 .address-select {
   background: #fff;
   border: 1px solid #eee;
@@ -845,78 +851,78 @@ img.product {
   position: relative;
   border-radius: 4px;
 }
-/* line 587, sass/store.sass */
+/* line 591, sass/store.sass */
 .address-select .radio {
   padding: 14px 15px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 588, sass/store.sass */
+/* line 592, sass/store.sass */
 .address-select .radio input {
   margin: 0 5px 0 0;
   position: relative;
   top: -1px;
 }
-/* line 596, sass/store.sass */
+/* line 600, sass/store.sass */
 .address-select ul.address-data {
   display: inline;
 }
-/* line 598, sass/store.sass */
+/* line 602, sass/store.sass */
 .address-select ul.address-data li {
   display: inline;
   display: inline;
 }
-/* line 601, sass/store.sass */
+/* line 605, sass/store.sass */
 .address-select ul.address-data li strong {
   display: none;
 }
-/* line 604, sass/store.sass */
+/* line 608, sass/store.sass */
 .address-select ul.address-data li span[data-key=firstName], .address-select ul.address-data li span[data-key=lastName] {
   font-weight: bold;
 }
-/* line 606, sass/store.sass */
+/* line 610, sass/store.sass */
 .address-select .actions {
   float: right;
   padding: 14px 15px;
   font-size: 0.9em;
 }
-/* line 610, sass/store.sass */
+/* line 614, sass/store.sass */
 .address-select .actions ul {
   margin: 0;
 }
-/* line 612, sass/store.sass */
+/* line 616, sass/store.sass */
 .address-select .actions ul li {
   display: inline-block;
   margin: 0 0 0 1em;
 }
-/* line 615, sass/store.sass */
+/* line 619, sass/store.sass */
 .address-select .actions ul li a {
   color: #999;
   text-decoration: underline;
 }
-/* line 618, sass/store.sass */
+/* line 622, sass/store.sass */
 .address-select .body {
   padding: 14px;
 }
 
-/* line 621, sass/store.sass */
+/* line 625, sass/store.sass */
 .hidden {
   display: none;
 }
 
-/* line 624, sass/store.sass */
+/* line 628, sass/store.sass */
 .product.row {
   border-bottom: 1px solid #fafafa;
   margin-bottom: 2.5rem;
 }
 
-/* line 628, sass/store.sass */
+/* line 632, sass/store.sass */
 .product-details {
   padding-top: 2rem;
 }
 
-/* line 631, sass/store.sass */
+/* line 635, sass/store.sass */
 .address-card {
   background-color: transparent;
   border-radius: 5px;
@@ -925,23 +931,23 @@ img.product {
   margin-bottom: 15px;
   position: relative;
 }
-/* line 638, sass/store.sass */
+/* line 642, sass/store.sass */
 .address-card form {
   display: inline;
   margin: 0px;
 }
-/* line 641, sass/store.sass */
+/* line 645, sass/store.sass */
 .address-card .edit {
   position: absolute;
   top: 20px;
   right: 20px;
 }
-/* line 645, sass/store.sass */
+/* line 649, sass/store.sass */
 .address-card ul {
   list-style: none;
 }
 
-/* line 648, sass/store.sass */
+/* line 652, sass/store.sass */
 .shipping-select {
   background: #fff;
   border: 1px solid #eee;
@@ -949,15 +955,15 @@ img.product {
   position: relative;
   border-radius: 4px;
 }
-/* line 654, sass/store.sass */
+/* line 658, sass/store.sass */
 .shipping-select input {
   margin: 0 5px 0 0;
 }
-/* line 656, sass/store.sass */
+/* line 660, sass/store.sass */
 .shipping-select label {
   padding: 10px 14px;
 }
-/* line 658, sass/store.sass */
+/* line 662, sass/store.sass */
 .shipping-select .price {
   float: right;
   padding: 4px 4px;
@@ -965,7 +971,7 @@ img.product {
   font-weight: normal;
 }
 
-/* line 664, sass/store.sass */
+/* line 668, sass/store.sass */
 .review-card {
   background-color: transparent;
   border-radius: 5px;
@@ -974,12 +980,12 @@ img.product {
   margin-bottom: 15px;
   position: relative;
 }
-/* line 671, sass/store.sass */
+/* line 675, sass/store.sass */
 .review-card ul {
   list-style: none;
   margin: 0;
 }
-/* line 674, sass/store.sass */
+/* line 678, sass/store.sass */
 .review-card ul li {
   border-top: 1px solid #E1E1E1;
   padding: 10px 0;
