--- a/craft/templates/partials/flashes.html
+++ b/craft/templates/partials/flashes.html
@@ -2,8 +2,8 @@
 {% set notices = craft.session.getFlash('notice') %}
 
 {% if notices %}
-  <div class="flash"><span class="fa fa-exclamation-circle"></span>{{ notices }}</div>
+  <div class="flash-bar"><span class="fa fa-exclamation-circle"></span>{{ notices }}</div>
 {% endif %}
 {% if errors %}
-  <div class="flash"><span class="fa fa-exclamation-circle"></span>{{ errors }}</div>
+  <div class="flash-bar"><span class="fa fa-exclamation-circle"></span>{{ errors }}</div>
 {% endif %}
