--- a/public/css/sass/store.sass
+++ b/public/css/sass/store.sass
@@ -556,6 +556,10 @@ img.product
   width: 100%
 
 .flash
+  color: $orange
+  margin-bottom: 10px
+
+.flash-bar
   background-color: $orange
   height: 35px
   line-height: 37px
