--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -328,6 +328,16 @@
       list-style: disc
       margin-bottom: 10px
 
+%wine-splat
+  content: ""
+  display: block
+  background-image: image-url('site/wine-splat.png')
+  background-position: 0 0
+  background-repeat: no-repeat
+  position: absolute
+  top: 110px
+  z-index: 0
+
 .page-content
   &:after
     content: ""
@@ -510,18 +520,11 @@
     img
       width: 195px
     &:before
-      content: ""
-      display: block
+      @extend %wine-splat
       width: 458px
       height: 454px
-      background-image: image-url('site/wine-splat.png')
-      background-position: 0 0
-      background-repeat: no-repeat
       background-size: 458px 454px
-      position: absolute
       right: -90px
-      top: 110px
-      z-index: 0
   .product-navigation
     padding-top: 35px
     display: -webkit-box
@@ -543,45 +546,80 @@
 
 #awards
   .awards-list
+    .award-title
+      font-size: 72px
+      font-family: $handwriting
+      margin-bottom: 50px
     li
-      @include box-sizing('border-box')
-      width: 49%
-      display: inline-block
-      vertical-align: top
-      margin-bottom: 70px
+      margin-bottom: 40px
       &:after
         content: ""
         clear: both
-      .left-image
+      .right-image
         float: left
-        margin-right: 20px
-        img
-          width: 137px
-          border: 2px solid #889B9F
-      .right-content
-        float: left
-        width: 296px
-      .award-date
-        font-family: $handwriting
-        font-size: 44px
-      .award-description
-        padding-bottom: 20px
-      .award-score
-        background: $orange
-        width: 60px
-        height: 60px
-        border-radius: 50%
-        display: inline-block
-        color: #fff
+        margin-left: 75px
+        width: 345px
         text-align: center
-        line-height: 60px
-        font-size: 36px
-        font-family: $sans
-        vertical-align: middle
-        margin-right: 10px
-      .award-giver
-        display: inline-block
-        vertical-align: middle
+        img
+          height: 540px
+          position: relative
+          z-index: 1
+        &:before
+          @extend %wine-splat
+          width: 345px
+          height: 400px
+          background-size: 348px auto
+          right: 0
+      .left-content
+        float: left
+        width: calc(100% - 420px)
+        ul
+          padding: 0
+      .badges
+        a
+          text-decoration: none
+          color: #fff
+        li
+          color: #fff
+          background: $orange
+          width: 180px
+          height: 180px
+          border-radius: 50%
+          display: inline-block
+          text-align: center
+          line-height: 160px
+          font-size: 24px
+          font-family: $sans
+          vertical-align: middle
+          position: relative
+          margin-right: 45px
+          margin-bottom: 45px
+          h2
+            font-size: 124px
+          h3
+            @include box-sizing('border-box')
+            position: absolute
+            left: 0
+            right: 0
+            bottom: 16px
+            height: 40px
+            line-height: 34px
+            background-color: #fff
+            border-radius: 20px
+            border: $orange 4px solid
+            color: #000
+            width: 100%
+
+      .quotes
+        li
+          margin-bottom: 40px
+          list-style-type: none
+          p
+            font-size: 18px
+            margin-bottom: 30px
+          h3
+            font-size: 28px
+            font-family: $sans
 
 // News Page
 
