--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -552,14 +552,15 @@
       margin-bottom: 50px
     li
       margin-bottom: 40px
+      list-style-type: none
       &:after
         content: ""
         clear: both
       .right-image
         float: left
         margin-left: 75px
-        width: 345px
-        text-align: center
+        width: 270px
+        text-align: right
         img
           height: 540px
           position: relative
@@ -569,10 +570,10 @@
           width: 345px
           height: 400px
           background-size: 348px auto
-          right: 0
+          right: -80px
       .left-content
         float: left
-        width: calc(100% - 420px)
+        width: 660px
         ul
           padding: 0
       .badges
@@ -594,15 +595,21 @@
           position: relative
           margin-right: 45px
           margin-bottom: 45px
+          &:nth-child(3n)
+            margin-right: 0
+          .award-badge-body
+            height: 100%
+            display: block
+          img
+            width: 100%
           h2
             font-size: 124px
           h3
             @include box-sizing('border-box')
-            position: absolute
-            left: 0
-            right: 0
-            bottom: 16px
+            bottom: 56px
+            position: relative
             height: 40px
+            margin-bottom: -40px
             line-height: 34px
             background-color: #fff
             border-radius: 20px
@@ -613,10 +620,9 @@
       .quotes
         li
           margin-bottom: 40px
-          list-style-type: none
           p
             font-size: 18px
-            margin-bottom: 30px
+            margin-bottom: 20px
           h3
             font-size: 28px
             font-family: $sans
