--- a/public/css/main.css
+++ b/public/css/main.css
@@ -892,55 +892,52 @@ main#content .container {
 }
 /* line 553, sass/main.sass */
 #awards .awards-list li {
-  margin-bottom: 40px;
+  margin-bottom: 70px;
   list-style-type: none;
 }
 /* line 556, sass/main.sass */
 #awards .awards-list li:after {
   content: "";
+  display: block;
   clear: both;
 }
-/* line 559, sass/main.sass */
+/* line 560, sass/main.sass */
 #awards .awards-list li .right-image {
   float: left;
   margin-left: 75px;
   width: 270px;
   text-align: right;
 }
-/* line 564, sass/main.sass */
+/* line 565, sass/main.sass */
 #awards .awards-list li .right-image img {
   height: 540px;
   position: relative;
   z-index: 1;
 }
-/* line 568, sass/main.sass */
+/* line 569, sass/main.sass */
 #awards .awards-list li .right-image:before {
   width: 345px;
   height: 400px;
   background-size: 348px auto;
   right: -80px;
 }
-/* line 574, sass/main.sass */
+/* line 575, sass/main.sass */
 #awards .awards-list li .left-content {
   float: left;
   width: 660px;
 }
-/* line 577, sass/main.sass */
+/* line 578, sass/main.sass */
 #awards .awards-list li .left-content ul {
   padding: 0;
 }
-/* line 580, sass/main.sass */
+/* line 581, sass/main.sass */
 #awards .awards-list li .badges a {
   text-decoration: none;
   color: #fff;
 }
-/* line 583, sass/main.sass */
+/* line 584, sass/main.sass */
 #awards .awards-list li .badges li {
   color: #fff;
-  background: #ED8F17;
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
   display: inline-block;
   text-align: center;
   line-height: 160px;
@@ -951,89 +948,96 @@ main#content .container {
   margin-right: 45px;
   margin-bottom: 45px;
 }
-/* line 598, sass/main.sass */
+/* line 595, sass/main.sass */
 #awards .awards-list li .badges li:nth-child(3n) {
   margin-right: 0;
 }
-/* line 600, sass/main.sass */
+/* line 597, sass/main.sass */
 #awards .awards-list li .badges li .award-badge-body {
   height: 100%;
   display: block;
+  background: #ED8F17;
+  width: 180px;
+  height: 180px;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 50%;
 }
-/* line 603, sass/main.sass */
+/* line 606, sass/main.sass */
 #awards .awards-list li .badges li img {
   width: 100%;
 }
-/* line 605, sass/main.sass */
+/* line 608, sass/main.sass */
 #awards .awards-list li .badges li h2 {
   font-size: 124px;
 }
-/* line 607, sass/main.sass */
+/* line 610, sass/main.sass */
 #awards .awards-list li .badges li h3 {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   bottom: 56px;
   position: relative;
+  padding: 0 10px;
   height: 40px;
   margin-bottom: -40px;
   line-height: 34px;
   background-color: #fff;
   border-radius: 20px;
   border: #ED8F17 4px solid;
+  white-space: nowrap;
   color: #000;
-  width: 100%;
 }
-/* line 621, sass/main.sass */
+/* line 626, sass/main.sass */
 #awards .awards-list li .quotes li {
   margin-bottom: 40px;
 }
-/* line 623, sass/main.sass */
+/* line 628, sass/main.sass */
 #awards .awards-list li .quotes li p {
   font-size: 18px;
   margin-bottom: 20px;
 }
-/* line 626, sass/main.sass */
+/* line 631, sass/main.sass */
 #awards .awards-list li .quotes li h3 {
   font-size: 28px;
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
 }
 
-/* line 634, sass/main.sass */
+/* line 639, sass/main.sass */
 #news .container h1 {
   font-size: 45px;
 }
-/* line 637, sass/main.sass */
+/* line 642, sass/main.sass */
 #news .container .page-detail .news-image {
   float: right;
   margin-left: 20px;
 }
-/* line 641, sass/main.sass */
+/* line 646, sass/main.sass */
 #news .container .page-detail .news-content img {
   float: right;
   margin-left: 20px;
   margin-bottom: 20px;
 }
-/* line 646, sass/main.sass */
+/* line 651, sass/main.sass */
 #news .container .page-content .news-image {
   margin-bottom: 20px;
 }
-/* line 648, sass/main.sass */
+/* line 653, sass/main.sass */
 #news .container .page-content .page-text {
   border-bottom: 1px solid #E2E2E2;
   padding-bottom: 30px;
   margin-bottom: 30px;
 }
-/* line 649, sass/main.sass */
+/* line 654, sass/main.sass */
 #news .container .page-content .page-text:only-of-type, #news .container .page-content .page-text:last-child {
   border-bottom: none;
 }
-/* line 654, sass/main.sass */
+/* line 659, sass/main.sass */
 #news .container .pagination {
   clear: left;
   width: 596px;
 }
-/* line 657, sass/main.sass */
+/* line 662, sass/main.sass */
 #news .container .pagination a {
   display: block;
   padding: 6px 12px;
@@ -1052,15 +1056,15 @@ main#content .container {
   font-style: italic;
   text-decoration: none;
 }
-/* line 674, sass/main.sass */
+/* line 679, sass/main.sass */
 #news .container .pagination a:first-child {
   float: right;
 }
-/* line 676, sass/main.sass */
+/* line 681, sass/main.sass */
 #news .container .pagination a:last-child {
   float: left;
 }
-/* line 678, sass/main.sass */
+/* line 683, sass/main.sass */
 #news .container .pagination:after {
   content: "";
   clear: both;
@@ -1068,11 +1072,11 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 685, sass/main.sass */
+/* line 690, sass/main.sass */
 #news .container .news-search-form form {
   position: relative;
 }
-/* line 687, sass/main.sass */
+/* line 692, sass/main.sass */
 #news .container .news-search-form form input[type=search] {
   width: 100%;
   border: none;
@@ -1085,7 +1089,7 @@ main#content .container {
   font-size: 24px;
   text-indent: 8px;
 }
-/* line 698, sass/main.sass */
+/* line 703, sass/main.sass */
 #news .container .news-search-form form input[type=submit] {
   position: absolute;
   right: 0;
@@ -1096,65 +1100,65 @@ main#content .container {
   background: #F48F1B url('/images/site/search.png?1478116388') no-repeat center center;
   text-indent: -10000px;
 }
-/* line 708, sass/main.sass */
+/* line 713, sass/main.sass */
 #news .container .news-search {
   width: 596px;
   min-height: 300px;
 }
-/* line 712, sass/main.sass */
+/* line 717, sass/main.sass */
 #news .container .news-search .result-listing {
   margin: 0;
   padding: 0;
 }
-/* line 715, sass/main.sass */
+/* line 720, sass/main.sass */
 #news .container .news-search .result-listing li {
   border-bottom: 1px solid #E2E2E2;
   list-style: none;
   padding: 14px 0;
   margin: 0;
 }
-/* line 720, sass/main.sass */
+/* line 725, sass/main.sass */
 #news .container .news-search .result-listing li:last-child {
   border-bottom: none;
 }
-/* line 722, sass/main.sass */
+/* line 727, sass/main.sass */
 #news .container .news-search .result-listing li img {
   float: left;
   margin-right: 25px;
 }
-/* line 725, sass/main.sass */
+/* line 730, sass/main.sass */
 #news .container .news-search .result-listing a {
   color: #333333;
   text-decoration: none;
 }
-/* line 728, sass/main.sass */
+/* line 733, sass/main.sass */
 #news .container .news-search .result-listing a span {
   color: #B24629;
   display: block;
 }
-/* line 731, sass/main.sass */
+/* line 736, sass/main.sass */
 #news .container .news-search .result-listing a span:last-child {
   color: #333333;
 }
-/* line 733, sass/main.sass */
+/* line 738, sass/main.sass */
 #news .container .news-search .no-results {
   font-size: 18px;
 }
-/* line 735, sass/main.sass */
+/* line 740, sass/main.sass */
 #news .container #news-sidebar {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 739, sass/main.sass */
+/* line 744, sass/main.sass */
 #news .container #news-sidebar a {
   color: #B24629;
 }
-/* line 741, sass/main.sass */
+/* line 746, sass/main.sass */
 #news .container #news-sidebar .news-sidebar-section {
   margin-bottom: 40px;
 }
-/* line 743, sass/main.sass */
+/* line 748, sass/main.sass */
 #news .container #news-sidebar h1 {
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
   color: #999999;
@@ -1163,17 +1167,17 @@ main#content .container {
   line-height: 52px;
   text-align: center;
 }
-/* line 750, sass/main.sass */
+/* line 755, sass/main.sass */
 #news .container #news-sidebar ul {
   padding: 0px;
 }
-/* line 752, sass/main.sass */
+/* line 757, sass/main.sass */
 #news .container #news-sidebar ul h4 {
   font-size: 14px;
   margin-bottom: 5px;
   margin-top: -4px;
 }
-/* line 756, sass/main.sass */
+/* line 761, sass/main.sass */
 #news .container #news-sidebar ul li {
   border-bottom: 1px solid #E2E2E2;
   list-style: none;
@@ -1181,7 +1185,7 @@ main#content .container {
   margin-bottom: 0;
   float: left;
 }
-/* line 762, sass/main.sass */
+/* line 767, sass/main.sass */
 #news .container #news-sidebar ul li a {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   text-decoration: none;
@@ -1189,21 +1193,21 @@ main#content .container {
   float: left;
   font-size: 20px;
 }
-/* line 768, sass/main.sass */
+/* line 773, sass/main.sass */
 #news .container #news-sidebar ul li a:hover {
   color: #ED8F17;
 }
-/* line 770, sass/main.sass */
+/* line 775, sass/main.sass */
 #news .container #news-sidebar ul li img {
   float: left;
   margin-right: 10px;
 }
-/* line 773, sass/main.sass */
+/* line 778, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup {
   padding: 25px 30px;
   background-color: #F3F3F3;
 }
-/* line 776, sass/main.sass */
+/* line 781, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup h2 {
   text-align: center;
   font-size: 20px;
@@ -1211,16 +1215,16 @@ main#content .container {
   padding: 0;
   margin-bottom: 25px;
 }
-/* line 782, sass/main.sass */
+/* line 787, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group {
   margin-bottom: 15px;
 }
-/* line 784, sass/main.sass */
+/* line 789, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 787, sass/main.sass */
+/* line 792, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group input {
   width: 100%;
   padding: 5px;
@@ -1229,14 +1233,14 @@ main#content .container {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 792, sass/main.sass */
+/* line 797, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group .mce_inline_error {
   width: 100%;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 795, sass/main.sass */
+/* line 800, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1256,33 +1260,33 @@ main#content .container {
   text-align: center;
 }
 
-/* line 816, sass/main.sass */
+/* line 821, sass/main.sass */
 #contact .prefer_email {
   clear: both;
   padding-top: 30px;
 }
-/* line 819, sass/main.sass */
+/* line 824, sass/main.sass */
 #contact .prefer_email a {
   color: #B24629;
   text-decoration: none;
 }
-/* line 822, sass/main.sass */
+/* line 827, sass/main.sass */
 #contact .prefer_email a:hover {
   text-decoration: underline;
 }
-/* line 824, sass/main.sass */
+/* line 829, sass/main.sass */
 #contact .success {
   display: none;
 }
-/* line 826, sass/main.sass */
+/* line 831, sass/main.sass */
 #contact .success p {
   margin-top: 20px;
 }
-/* line 828, sass/main.sass */
+/* line 833, sass/main.sass */
 #contact .success strong {
   font-weight: bold;
 }
-/* line 830, sass/main.sass */
+/* line 835, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -1291,44 +1295,44 @@ main#content .container {
   border-bottom: 1px solid #B24629;
   margin: 20px 0;
 }
-/* line 837, sass/main.sass */
+/* line 842, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 840, sass/main.sass */
+/* line 845, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 842, sass/main.sass */
+/* line 847, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 844, sass/main.sass */
+/* line 849, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 847, sass/main.sass */
+/* line 852, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 849, sass/main.sass */
+/* line 854, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 851, sass/main.sass */
+/* line 856, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 855, sass/main.sass */
+/* line 860, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 859, sass/main.sass */
+/* line 864, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1346,12 +1350,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 876, sass/main.sass */
+/* line 881, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 880, sass/main.sass */
+/* line 885, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -1362,7 +1366,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 892, sass/main.sass */
+/* line 897, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -1373,11 +1377,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 902, sass/main.sass */
+/* line 907, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 905, sass/main.sass */
+/* line 910, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -1391,7 +1395,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 919, sass/main.sass */
+/* line 924, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -1403,7 +1407,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 930, sass/main.sass */
+/* line 935, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1411,7 +1415,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 938, sass/main.sass */
+/* line 943, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1419,7 +1423,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 945, sass/main.sass */
+/* line 950, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1427,7 +1431,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 953, sass/main.sass */
+/* line 958, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
