--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -551,10 +551,11 @@
       font-family: $handwriting
       margin-bottom: 50px
     li
-      margin-bottom: 40px
+      margin-bottom: 70px
       list-style-type: none
       &:after
         content: ""
+        display: block
         clear: both
       .right-image
         float: left
@@ -582,10 +583,6 @@
           color: #fff
         li
           color: #fff
-          background: $orange
-          width: 180px
-          height: 180px
-          border-radius: 50%
           display: inline-block
           text-align: center
           line-height: 160px
@@ -600,6 +597,12 @@
           .award-badge-body
             height: 100%
             display: block
+            background: $orange
+            width: 180px
+            height: 180px
+            margin: 0 auto
+            position: relative
+            border-radius: 50%
           img
             width: 100%
           h2
@@ -608,14 +611,16 @@
             @include box-sizing('border-box')
             bottom: 56px
             position: relative
+            padding: 0 10px
+            line
             height: 40px
             margin-bottom: -40px
             line-height: 34px
             background-color: #fff
             border-radius: 20px
             border: $orange 4px solid
+            white-space: nowrap
             color: #000
-            width: 100%
 
       .quotes
         li
