--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -71,24 +71,28 @@
       font-size: 72px
 
 .page-galleries
-  margin-top: 25px
+  img + &
+    padding-top: 25px
+    border-top: 1px solid $copper
   [data-gallery]
     cursor: pointer
     .gallery-description
       display: inline-block
       vertical-align: middle
+      width: 200px
       h4
-        font-size: 28px
+        font-size: 24px
         font-family: $sans
       p
         font-size: 14px
+        line-height: 20px
         margin-bottom: 0
     img
       display: inline-block
       vertical-align: middle
       vertical-align: middle
       display: inline-block
-      width: 100px
+      width: 110px
       margin-right: 15px
 
 #gallery
@@ -110,9 +114,14 @@
     margin-left: -25px
     justify-content: center
     overflow: hidden
+    border-top: none
+    margin-top: 25px
+    padding-top: 0
     [data-gallery]
       width: 300px
       margin: 0 25px 40px 25px
+    .gallery-description
+      width: auto
     img
       width: 100%
       height: 300px
@@ -121,6 +130,7 @@
       margin-bottom: 15px
     h4
       margin-bottom: 5px
+      font-size: 28px
     p
       line-height: 22px
     &.video-galleries
@@ -349,11 +359,14 @@
     float: right
     padding-left: 75px
     width: 334px
-    img
+    & > img
+      margin-bottom: 25px
       width: 334px
   .page-text
     float: left
     width: 596px
+    img
+      max-width: 100%
     h1
       margin-bottom: 35px
     h2
